BugFix: was stretching out raster images

--- a/worg.css
+++ b/worg.css
@@ -150,18 +150,11 @@ and modified a bit.. */
     }
 
     .org-svg {
-	width: 50%;
+	width: 100%;
 	max-height: 500px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	preserveAspectRatio: none;
-    }
-
-    img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%
     }
 }
